--- a/style.css
+++ b/style.css
@@ -1,41 +1,136 @@
-body {
+/*center {
+    top: 158px;
+}
+*/
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 
 }
 
-h1 {
-    color: navy;
-    display: flex;
-    align-items: center:
-    justify-content: center;
+.bottom {
+  margin-top: 100px;
 }
+
+.footer {
+  float: left;
+  display: inline-block;
+  padding: 5px 8px;
+}
+
+.rfooter {
+  float: right;
+  display: inline-block;
+  padding: 5px 8px;
+}
+
+/*ul {
+  display: inline-flex;
+  flex-direction: row-reverse;
+  align-items: flex-end;
+}*/
+
+li {
+    font-family: "Arial", "Sans-Serif";
+    font-size: 13px;
+    margin: 0.5em;
+    padding: 0.5em;
+}
+
+#signin {
+  float: right;
+  display: inline-block;
+  font-size: 14px;
+  background-color: rgb(66, 133, 244);
+  color: white;
+  border-radius: 2px;
+  padding: 5px 10px;
+  border-color: rgb(66, 133, 244);
+  border: 1px rgb(66, 133, 244) solid;
+  height: 20px;
+  width: 50px;
+  text-align: center;
+  
+}
+
+li.fright {
+  float: right;
+  display: block;
+  padding: 5px 8px;
+}
+
+li.fleft {
+  float: left;
+  display: block;
+  padding: 5px 8px;
+}
+
 .logo {
-    height: 92px;
-    width: 272px;
-    padding-bottom: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  padding-top: 200px;
+}
 
+
+input {
+    -webkit-writing-mode: horizontal-tb !important;
+    text-rendering: auto;
+    color: -internal-light-dark-color(black, white);
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    -webkit-appearance: textfield;
+    background-color: -internal-light-dark-color(white, black);
+    -webkit-rtl-ordering: logical;
+    cursor: text;
+    margin: 0em;
+    font: 400 11px system-ui;
+    padding: 1px;
+    border-width: 2px;
+    border-style: inset;
+    border-color: initial;
+    border-image: initial;
+}
+
+input, textarea, button {
+    border: none;
+}
+
+input[type=submit] {
+    margin-top: 35px;
+    background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
+    box-sizing: border-box;
+    padding: 10px;
+    margin-bottom: 100px;
+    margin-right: 10px;
+    border-radius: 5px;
+    border-color: rgb(223, 225, 229);
+    width: 120px;
+}
+
+form {
+  text-align: center;
+  position: relative;
+  margin-right: 300px;
 }
 
 .searchbar{
     border-radius: 25px;
     padding: 10px;
-    margin: 10px;
+    margin-top: 10px;
     height: 20px;
     width: 500px;
     border: 1px solid #d3d3d3;
     outline: none;
     text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .searchbar[type="submit"] {
     border-radius: 25px;
     background: #f2f2f2;
-    border: 10px solid black;
+    border: none;
     color: #757575;
     cursor: default;
     font-size: 14px;
@@ -48,70 +143,8 @@ h1 {
 .searchbar[type="submit"]:hover {
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     background: #f8f8f8;
-    border: 10px solid black;;
+    border: none;
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     color: #222;
 }
 
-/*.googlesearch {
-    color: lightgrey;
-    display: inline-block;
-    padding: 10px;
-    margin: 10px;
-    height: 10px;
-    width: 80px;
-    border: 1px solid #d3d3d3;
-    outline: none;
-    text-align: center;
-    margin-top: 150px;
-    margin-left: 400px;
-}*/
-
-.googlesearch {
-    border-radius: 4px;
-    color: #5F6368;
-    font-family: arial,sans-serif;
-    font-size: 14px;
-    margin: 11px 4px;
-    padding: 0 16px;
-    line-height: 27px;
-    height: 36px;
-    min-width: 54px;
-    text-align: center;
-    cursor: pointer;
-    user-select: none;
-    display: inline-block;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.googlesearch[type="submit"] {
-    -webkit-appearance: push-button;
-    white-space: pre;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/*.button {
-  background-color: #4CAF50; 
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}*/
-
-input {
-  background-color: #f2f2f2;
-  border: none;
-  padding: 15px 32px;
-  text-decoration: none;
-  display: flex;
-  align-items: space-between;
-  justify-content: center;
-  font-size: 16px;
-}
