--- a/style.css
+++ b/style.css
@@ -10,19 +10,18 @@ ul {
 
 }
 
-.bottom {
+.fnav {
   margin-top: 100px;
+  background-color: lightgrey;
 }
 
-.footer {
+li.footer {
   float: left;
-  display: inline-block;
   padding: 5px 8px;
 }
 
-.rfooter {
+li.rfooter {
   float: right;
-  display: inline-block;
   padding: 5px 8px;
 }
 
@@ -41,7 +40,6 @@ li {
 
 #signin {
   float: right;
-  display: inline-block;
   font-size: 14px;
   background-color: rgb(66, 133, 244);
   color: white;
@@ -57,13 +55,11 @@ li {
 
 li.fright {
   float: right;
-  display: block;
   padding: 5px 8px;
 }
 
 li.fleft {
   float: left;
-  display: block;
   padding: 5px 8px;
 }
 
